    removed GraphHopper.set/getTraversalMode() methods, #1705
    edge-based CH is now chosen by default if it was prepared, #1706
    it is now possible to specify finite u-turn costs for CH preparation, #1671
    removed distances from CH shortcuts, reduces memory consumption per shortcut by 4 bytes (about 8-10%), #1719

0.12
    renamed VirtualEdgeIteratorState.getOriginalEdgeKey to more precise getOriginalEdgeKey #1549
    access refactoring #1436 that moves AccessValue into SpatialRule.Access
    refactoring of EncodingManager to use builder pattern. Migration should be simple. Replace new EncodingManager with EncodingManager.create
	The methods GraphHopper.setEnableInstructions/setPreferredLanguage is now in EncodingManager.Builder
    EncodingManager.supports renames to hasEncoder
    big refactoring #1447: to increase 64bit limit of flags, make reverse direction handling easier, to allow shared EncodedValues,
        remove reverseFlags method, much simpler property access, simplify FlagEncoder (maybe even deprecate this interface at a later stage)
    moved shp-reader into separate repository: https://github.com/graphhopper/graphhopper-reader-shp    

0.11
    web resources for dropwizard web framework (no servlets anymore) #1108
    prefix -Dgraphhopper. for command line arguments necessary, see docs/web/quickstart.md or docs/core/quickstart-from-source.md#running--debbuging-with-intellij for details
    delegated reading properties to dropwizard, i.e. the new format yml is not read again in GraphHopper.init
    changed file format for landmarks #1376
    convert properties into new yml format via: https://gist.github.com/karussell/dbc9b4c455bca98b6a38e4a160e23bf8

0.10
    introduce path details
    added handcoded API java client to this repository

0.9
    remove war bundling support #297
    rename of DefaultModule to GraphHopperModule and GHServletModule to GraphHopperServletModule