@@ -189,9 +189,6 @@ public class CarFlagEncoder extends AbstractFlagEncoder {
 
     @Override
     public boolean acceptsRelation(OSMTurnRelation relation) {
-        if (relation == null) {
-            return true;
-        }
         if (relation.isVehicleTypeConcernedByTurnRestriction(restrictions)) {
             return true;
         }
