@@ -118,9 +118,6 @@ public class DataFlagEncoder extends AbstractFlagEncoder {
 
     @Override
     public boolean acceptsRelation(OSMTurnRelation relation) {
-        if (relation == null) {
-            return true;
-        }
         if (relation.isVehicleTypeConcernedByTurnRestriction(restrictions)) {
             return true;
         }
